log
Fri 12 Aug 2022 04:37:26 PM UTC: 
 tests:  0|7
total_score: 0/70
fa7a903
Fri 12 Aug 2022 04:47:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     c=a+b;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
7eff3ef
